css/main.css
/*####GENERAL ELEMENT STYLES####*/
body {
    font-family: "Roboto", sans-serif;

    height: 100vh;
    margin: 0;
    padding: 0;
}

h1 {
    font-size: 225%;
    font-weight: 500;

    margin: .0;
    padding: 0;
}

h2 {
    font-size: 175%;
    font-weight: 500;

    margin: 0;
    padding: 0;
}

h3 {
    font-weight: 500;

    margin: 0 0 1em 0;
    padding: 0;
}

p {
    font-size: 120%;

    margin-top: 0;
    margin-bottom: 1em;
    padding-top: 0;
}

p:last-child {
    margin-bottom: 0;
}

a:link {
    color: black;
}

a:visited {
    color: #616161;
}

a:hover {
    text-decoration: none;
}

noscript {
    display: block;

    margin-top: .5em;
}

noscript a:link {
    color: white;
}

noscript a:visited {
    color: white;
}

/*####HEADER & NAV STYLES####*/
header {
    display: flex;
    flex-direction: row;

    margin: 0 0 1.5em 0;
    padding: 1em;

    text-align: center;

    color: white;
    background-color: #3F51B5;
    box-shadow: 0 .2em .4em 0 rgba(0, 0, 0, .25);

    align-items: center;
    justify-content: center;
}

.main-header {
    flex-direction: column;

    padding-bottom: 0;

    align-items: center;
}

.main-header h1 {
    font-size: 300%;

    margin-bottom: 1em;
}

header a:link {
    color: white;
}

nav {
    display: flex;

    min-width: 40%;
    margin-top: 1em;

    justify-content: center;
}

nav ul {
    display: flex;

    width: 100%;
    margin-bottom: 0;
    padding: 0;

    align-items: center;
    justify-content: center;
}

nav li {
    font-size: 150%;

    position: relative;

    display: inline-block;

    padding: .3em;

    list-style-type: none;

    transition: .25s;

    flex: 1;
}

nav li:hover {
    color: white;
    background-color: #5C6BC0;
}

nav li a {
    display: block;

    text-decoration: none;
}

nav li a:visited {
    color: white;
}

.current-page {
    color: white;
    box-shadow: 0 -.2rem 0 white inset;
}

.current-page:hover {
    background-color: initial;
}

.left, .right {
    flex: 1;
}

/*####FOOTER STYLES####*/
footer {
    font-size: 120%;

    display: flex;

    min-height: 6em;

    color: white;
    background-color: #3F4883;

    align-items: center;
    justify-content: space-between;
}

.footer-left {
    float: left;

    padding-left: 2em;
}

.footer-source {
    font-size: 70%;

    margin: .5em 0;
}

.footer-source a {
    display: block;
}

.footer-source a:link, .footer-right a:link {
    color: white;
}

.footer-source a:visited, .footer-right a:visited {
    color: white;
}

.footer-right {
    font-size: 200%;

    float: right;

    padding-right: 2em;
}

.footer-right a:hover {
    transition: .3s;

    color: #7986CB;
}

/*####CONTENT CONTAINERS####*/
.page-content, .page-content-center {
    display: flex;
    flex-direction: column;

    width: 100%;
    margin: 0;
    padding: 0;

    align-items: center;
}

.page-content-center {
    min-height: 100vh;

    justify-content: center;;
}

.center-window {
    display: flex;
    flex-direction: column;

    width: 60vw;
    margin-bottom: 2em;
    padding: 0 1em 1em 1em;

    text-align: center;

    border-radius: .1em;
    background-color: #FAFAFA;
    box-shadow: 0 .2em .4em 0 rgba(0, 0, 0, .50);

    align-items: center;
}

.center-window header {
    width: 100%;
    padding: 1em;
}

.center-window header h2 {
    font-size: 170%;
}

.center-window h3, .center-window p {
    width: 100%;
}

/*####COMPONENT STYLES*/

.header-email {
    font-size: 150%;

    margin-top: .5em;
}

.header-email i {
    margin-right: .5em;
}

.links {
    font-size: 300%;
}

.links i {
    margin: .5em;
}

.links i:hover {
    transition: .3s;

    color: #3F51B5;
}


/*####PROJECTS STYLES####*/
.projects-container {
    display: flex;
    flex-direction: row;

    align-items: flex-start;
    flex-wrap: wrap;
    justify-content: space-between;
}


.project-entry {
    display: flex;
    flex-direction: column;

    width: 22em;
    margin: 1em;

    cursor: pointer;

    box-shadow: 0 .2em .4em 0 rgba(0, 0, 0, .50);
}

.project-entry:hover {
    transition: .3s;

    background-color: #EEEEEE;
}

.project-content {
    padding: 1em;

    color: white;
    background-color: #3F51B5;
}

.project-content h2 {
    margin-bottom: .3em;
}

.project-content h3 i {
    margin-right: .5em;
}

.project-img img {
    width: auto;
    max-width: 20em;
    height: 15em;
    padding: 1em 0;
}

.project-tags {
    background-color: #5C6BC0;
}

.project-tags ul {
    display: flex;

    margin: .5em;

    flex-wrap: wrap;
    justify-content: space-between;
}

.project-tags li {
    font-size: 90%;

    margin: .2em;
    padding: .5em 1em;

    color: white;
    border-radius: 1.5em / 100%;
    background-color: #7986CB;
}

/*####PROJECT POPUP STYLES*/
.cover {
    position: fixed;
    z-index: 1;
    top: 0;
    left: 0;

    min-width: 100vw;
    min-height: 100vh;

    background-color: rgba(0, 0, 0, .75);
}

.page-content-center .center-window {
    overflow-y: auto;

    max-height: 90vh;
}

.image-container {
    display: flex;

    align-items: center;
    flex-wrap: wrap;
    justify-content: center;
}

.image-container img {
    width: 25rem;
    max-width: 90vw;
    height: auto;
    margin: .5rem;
}

.close-button {
    font-size: 2em;

    float: right;

    cursor: pointer;

    color: white;
}

@media only screen and (max-device-width: 480px) {
    body {
        font-size: 150%;
    }

    h1 {
        font-size: 275%;
    }

    h2 {
        font-size: 175%;
    }

    h3 {
        font-size: 150%;
    }

    p {
        font-size: 80%;
    }

    .main-header h1 {
        font-size: 175%;

        margin-bottom: .5em;
    }

    .main-header h2 {
        font-size: 90%;
        font-weight: 300;
    }

    .header-email {
        font-size: 80%;
    }

    nav {
        width: 100%;
    }

    nav li {
        font-size: 90%;
    }

    .links {
        font-size: 200%;
    }

    .center-window {
        width: 90vw;
        margin-bottom: 1em;
        padding: 0 .5em .5em .5em;
    }

    .center-window header {
        margin-bottom: 1em;
        padding: .5em;
    }

    .center-window header h2 {
        font-size: 130%;
    }

    .center-window p {
        max-width: 95%;
    }

    .project-entry {
        font-size: 60%;
    }

    .project-entry h3 {
        font-size: 100%;
    }

    .page-content-center .center-window {
        font-size: 80%;
    }

    footer {
        font-size: 65%;
    }

    .footer-left {
        padding-left: 1em;
    }

    .footer-right {
        padding-right: 1em;
    }
}

